# ByteBot-Navigation

./: .gitignore  README.md  setup.md
src/nav_controller/: CMakeLists.txt  package.xml
src/nav_controller/launch/: nav_points.launch.py
src/nav_controller/nav_controller/nodes/: add_waypoint.py  change_state.py  clicked_point_listener.py  nav_points.py  show_all_commands.py
src/nav_controller/nav_controller/resources/: commands.json  commands_cisco_room.json
src/nav_controller/nav_controller/state/: patrol_state.json
src/nav_controller/scripts/: add_waypoint.py  change_state_node.py  clicked_point_listener.py  nav_node.py  show_commands.py
src/nav_module_controller/: package.xml  setup.cfg  setup.py
src/nav_module_controller/nav_module_controller/: nav_points.py
src/nav_module_interfaces/: CMakeLists.txt  package.xml
